version 2024a, in progress
- $sysinfo bundle: add gnuplot version as scalar ("gnuplot")
- "plot" command: update the help text and apply a fix for the
  case of showing multiple bands
- "tsplots" command with matrix input: don't require a list
  argument, plot all columns by default
- "gnuplot" command with --matrix and --time-series options:
  show dataset time on x-axis if possible
- "info" command: add --to-file and --from-file options for
  manipulating the description of a dataset
- "tsls" command: add a --matrix-diff option for the Hausman
  test, using the method of Padadopoulos (Econometrics, 2023)
- "gmm" command block: support lists of series in extenso on
  either side of an "orthog" statement
- "corrgm", "xcorrgm", "pergm" and "qlrtest" commands: support
  the --outbuf option for directing plot output to a buffer
- "gmm" command: mark the --two-step and --iterate options as
  mutually exclusive
- "loop foreach": support arrays and bundles that are located
  inside other arrays or bundles
- "pkg install" command: support installation of data file
  packages in tar.gz format from the gretl server
- bcheck() function: make the second argument optional
- Fix broken backward compatibility in handling of backslash
  followed by double-quote in string literals
- Fix bug: crash when plotting matrix data with the multiple
  bands option
- Fix bug: restore support for reading JMulTi .dat files
- Fix bug: the "smpl" command with --dummy option could end
  up broken after doing "Save data" in the GUI when there's
  a sample restriction in place
- Fix bug: possible crash when a dbnomics download fails, if
  invoked via the "data" command
- Fix bug: after estimation of a panel data model via pooled
  OLS with the --cluster option, the "add" test was not
  working
- Fix bug: the symmetry checker for gretl matrices could fail
  to flag asymmetry in some cases
- Fix bug: typeof() and typename() flagging an error in case